update to login and horse form

--- a/views/src/App.css
+++ b/views/src/App.css
@@ -18,6 +18,14 @@ body{
   margin:0 auto;
 }
 
+.container{
+  display: flex;
+  flex-direction: column;
+  max-width: 1144px;
+  justify-content: center;
+  align-items: center;
+}
+
 /* Fade In Animation */
 @keyframes fade-in {
   from{opacity: 0;}
