--- a/views/src/App.css
+++ b/views/src/App.css
@@ -17,13 +17,17 @@ body{
   width: 100%;
   max-width: 1144px;
   margin:0 auto;
+  padding:5px;
+  text-align: center;
 }
-
+.isActive{
+  border-bottom: 3px solid white;
+}
 .container{
   display: flex;
   flex-direction: column;
   max-width: 1144px;
-  
+  padding:5px;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
@@ -32,6 +36,7 @@ body{
   display: flex;
   flex-direction: column;
   max-width: 600px;
+  width:100%;
   justify-content: center;  
   text-align: center;
 }
@@ -79,9 +84,9 @@ form{
 }
 
 input{ 
-  max-width: 100%;
+  max-width: 95%;
   min-height: 25px;
-  margin:10px 3px;
+  margin:3px;  
   border-radius: 2px;
   outline: none;
   border: none;
@@ -92,14 +97,17 @@ input:focus{
   outline: none;
 }
 
-input[type='submit']{
+input[type='submit'], button[type='submit']{
   background-color: green;
   color:white;
   padding:10px;
   transition: transform .25s;
+  border:none;
+  min-width: 150px;
+  border-radius: 3px;
 }
 
-input[type='submit']:hover{
+input[type='submit']:hover, button[type='submit']:hover{
   cursor: pointer;
   transform: translate(0,3px);
   max-width: 100%;
@@ -110,3 +118,4 @@ textarea{
   margin:10px 3px;
   height:150px; 
 }
+
