--- a/views/src/components/admin/side-menu/SideMenu.module.css
+++ b/views/src/components/admin/side-menu/SideMenu.module.css
@@ -1,11 +1,15 @@
 .sideMenu{
     padding-right: 5em;
+    display: flex;
+    flex-direction: column;  
+    margin:0; 
+    
 }
 
 .sideMenu li{
     text-decoration: none;
     list-style: none;
-    margin:12px 0;
+    margin:5px 0;
     font-weight: bolder;
     font-size: 20px;
 }
@@ -21,7 +25,11 @@
 }
 
 .dropdown{
-   visibility: hidden;
+  display: none;
+}
+
+.sideMenu .isActive{
+    border-bottom: 3px solid white;
 }
 
 @media only screen and (max-width:750px){
@@ -32,10 +40,14 @@
         display:none;
     }
     .dropdown{
-        visibility: visible;
+       display:block;
         width:100%;    
         height:50px;   
         font-size: 25px;
         text-align: center;
+    }
+    .topMenu{
+        padding: 0;
+        margin: 0;
     }
 }
