--- a/views/src/components/navbar/Navbar.module.css
+++ b/views/src/components/navbar/Navbar.module.css
@@ -2,6 +2,7 @@
     display:flex;
     height:100px;
     padding:10px;
+    width:100%;
     box-shadow: 1px 3px 3px black;
     position: sticky;
     top:0;
