--- a/views/src/App.css
+++ b/views/src/App.css
@@ -15,7 +15,7 @@ body{
   max-width: 100vw;;
   min-height: 100vh; 
   height: 100vh;
-  text-align: center; 
+  text-align: center;  
 }
 
 #loginPage{
@@ -28,7 +28,7 @@ body{
 
 #loginPage form{
   width: 100%;
-  max-width: 50%;
+  max-width: 600px;
 }
 .flex{
   display: flex;
@@ -62,7 +62,7 @@ body{
   display: flex;
   width: 100%;
   flex-wrap: wrap;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 
