--- a/views/src/components/navbar/Navbar.module.css
+++ b/views/src/components/navbar/Navbar.module.css
@@ -1,7 +1,7 @@
 .navbar{
     display:flex;
     height:100px;
-    padding:10px;
+    padding:10px 35px 10px 0;
     width:100%;
     box-shadow: 1px 3px 3px black;
     position: sticky;
@@ -100,6 +100,7 @@
     .hamburger{
         display: flex;
         margin-left:auto;
+        padding-right: 10px;
         
     }
     .hamburger div{
