--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -4,11 +4,11 @@
     padding:10px 35px 10px 0;
     width:100%;
     box-shadow: 1px 3px 3px black;
-    position: sticky;
+    position: fixed;
     top:0;
     background-color: rgba(255, 255, 255, 0.9);
     color: rgb(0, 0, 0);
-    z-index: 5;
+    z-index: 5;   
 }
 
 .hamburger{
