--- a/src/components/loading/loading.styles.css
+++ b/src/components/loading/loading.styles.css
@@ -7,15 +7,61 @@
     }
     
 }
+@keyframes bounce{
+    0%{
+        transform:translateY(0) scale(1);
+    }
+    30%{
+        transform:translateY(-10px) scale(1.25);
+        
+    }
+    75%{
+        transform:translateY(0) scale(1);
+    }   
+}
+
 
 .loading-module{
     display: flex;
     flex-direction: column;
-    height: 100%;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
     justify-content: center;
     align-items: center;    
 }
-.loading-module img{
-    animation: spin infinite 3s linear;
+.loading-module img{   
     max-width: 400px;
+}
+.ball-loader span{
+    display: inline-block;   
+    font-size: 25px;
+    font-weight: bolder;   
+    margin:20px 10px;
+   
+}
+
+.ball-loader span:nth-child(1){
+    animation: 2s bounce infinite ease-in-out;
+}
+
+.ball-loader span:nth-child(2){
+    animation:2s 0.333s bounce infinite ease-in-out;
+}
+
+.ball-loader span:nth-child(3){
+    animation:2s .7s bounce infinite ease-in-out;
+}
+.ball-loader span:nth-child(4){
+    animation:2s .9s bounce infinite ease-in-out;
+}
+.ball-loader span:nth-child(5){
+    animation: 2s 1.2s bounce infinite ease-in-out;
+}
+.ball-loader span:nth-child(6){
+    animation: 2s 1.5s bounce infinite ease-in-out;
+}
+.ball-loader span:nth-child(7){
+    animation: 2s 1.7s bounce infinite ease-in-out;
 }
