--- a/src/components/loading/loading.styles.css
+++ b/src/components/loading/loading.styles.css
@@ -7,7 +7,7 @@
     }
     
 }
-@keyframes bounce{
+@keyframes loading-bounce{
     0%{
         transform:translateY(0) scale(1);
     }
@@ -43,25 +43,25 @@
 }
 
 .ball-loader span:nth-child(1){
-    animation: 2s bounce infinite ease-in-out;
+    animation: 2s loading-bounce infinite ease-in-out;
 }
 
 .ball-loader span:nth-child(2){
-    animation:2s 0.333s bounce infinite ease-in-out;
+    animation:2s 0.333s loading-bounce infinite ease-in-out;
 }
 
 .ball-loader span:nth-child(3){
-    animation:2s .7s bounce infinite ease-in-out;
+    animation:2s .7s loading-bounce infinite ease-in-out;
 }
 .ball-loader span:nth-child(4){
-    animation:2s .9s bounce infinite ease-in-out;
+    animation:2s .9s loading-bounce infinite ease-in-out;
 }
 .ball-loader span:nth-child(5){
-    animation: 2s 1.2s bounce infinite ease-in-out;
+    animation: 2s 1.2s loading-bounce infinite ease-in-out;
 }
 .ball-loader span:nth-child(6){
-    animation: 2s 1.5s bounce infinite ease-in-out;
+    animation: 2s 1.5s loading-bounce infinite ease-in-out;
 }
 .ball-loader span:nth-child(7){
-    animation: 2s 1.7s bounce infinite ease-in-out;
+    animation: 2s 1.7s loading-bounce infinite ease-in-out;
 }
