--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,14 @@ body{
   display: flex;
   align-items: center; 
   flex-wrap: wrap; 
+  justify-content: center;
+}
+
+.m-1{
+  margin:1em;
+}
+.ml-1{
+  margin-left: 1em;
 }
 .isActive{
   border-bottom: 3px solid white;
