--- a/src/pages/user/User.module.css
+++ b/src/pages/user/User.module.css
@@ -8,4 +8,13 @@
     justify-content: space-evenly;
     height: 100%;
     max-height:550px;
+    width:100%;
+    max-width: 600px;
+}
+
+@media only screen and (max-width:450px){
+    .login-form, .register-form{
+        max-width: 350px;
+        max-height: 450px;
+    }
 }
