--- a/src/components/cardContainer/CardContainer.module.css
+++ b/src/components/cardContainer/CardContainer.module.css
@@ -1,10 +1,33 @@
 .card-container{
-    margin:1em auto;
+    margin:1em auto;    
     display:flex;
     flex-wrap: wrap;   
     justify-content: flex-start;
     padding: 0 12px;
-    max-width: 1144px;  
-   
+    max-width: 1144px;     
 }
+
+@media only screen and (max-width:1050px) {
+    .card-container{
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 675px;       
+    }
+}
+
+@media only screen and (max-width:702px) {
+    .card-container{       
+       width: 100%;    
+    }
+  
+}
+
+@media only screen and (max-width:678px) {
+    .card-container{  
+        width: 100%;        
+       justify-content: center;  
+    }
+    
+}
+
 
