--- a/src/pages/horse/Horse.module.css
+++ b/src/pages/horse/Horse.module.css
@@ -9,6 +9,13 @@ html {
   padding: 0 12px; 
 }
 
+.horse-page h1{
+  margin: 0;
+  font-size: 5rem;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
 .horse-page nav {
   width: 100%;
   max-width: 400px;
@@ -55,7 +62,7 @@ html {
 
 .horse-container { 
   width: 100%;
-  margin: 5em auto;
+  margin: 2.5em auto;
   padding-right: 15px;  
   display:flex;
   flex-direction: column;
@@ -70,10 +77,11 @@ html {
 }
 
 .main-horse-image {
-  width: 400px;
+  width: auto;
   max-width: 95%;
   max-height: 400px;
   border: 5px solid white;
+  
 }
 
 .horse-page p {
