added feature to edit riding journal entries

--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,13 @@ body{
  flex-direction: column;  
 }
 
+.btn-container{
+  display: flex;
+  justify-content: space-between;
+}
+
 /* Text Format */
 .text-start{
   text-align: left;
 }
+
