--- a/src/pages/horse/components/journalCard/JournalCard.module.css
+++ b/src/pages/horse/components/journalCard/JournalCard.module.css
@@ -4,15 +4,14 @@
     background-size: cover;
     height:fit-content;    
     width: 300px;
-    padding-left: 25px;
+    padding-left: 35px;
     padding-right: 5px;
     padding-top:105px;
     padding-bottom: 150px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items:flex-start;
-    overflow: hidden;
+    align-items:flex-start;   
     font-family: 'Just Another Hand', cursive;     
     position:relative;
 }
@@ -24,7 +23,10 @@
     font-size: 25px;
     margin: 0;
     margin-bottom: 3px;
-    
+    max-width: 90%;
+    padding: 0 15px 0 0; 
+    white-space: pre-line;
+    text-align: start;
 }
 
 .journal-card .deleteBtn{
@@ -33,4 +35,38 @@
     right:75px;
     width:75px;
     background-color: red;
+}
+
+.journal-card .edit-form{
+    position: absolute;
+    z-index: 30;
+    width: 100%;       
+    top:0;
+    left: 0;
+}
+
+.journal-card .edit-form textarea{
+    min-height: 300px;
+    max-width: 90%;
+    font-size: 1.25em;
+}
+
+.journal-card .edit-form button[type='submit']{
+    height: 25px;
+    width: 75px;
+    background: #01ad2c;
+    border:none;
+    margin-top: 5px;
+    border-radius: 5px;
+    color: whitesmoke;
+}
+
+.journal-card .edit-form .cancel-btn{
+    height: 25px;
+    width: 75px;
+    background: #ad0101;
+    border:none;
+    margin-top: 5px;
+    border-radius: 5px;
+    color: whitesmoke;
 }
