--- a/src/pages/horse/components/journalCard/JournalCard.module.css
+++ b/src/pages/horse/components/journalCard/JournalCard.module.css
@@ -4,6 +4,7 @@
     background-size: cover;
     height:fit-content;    
     width: 300px;
+    height:575px;
     padding-left: 35px;
     padding-right: 5px;
     padding-top:105px;
